fix: dark mode color and adding icons

--- a/src/main/resources/web/app/dark.scss
+++ b/src/main/resources/web/app/dark.scss
@@ -1,7 +1,7 @@
-$primary: #333;
+$primary: #1E1E20;
 $sidebar: #464646;
 $hover: #565656;
-$text: #eee;
+$text: #c4c4c4;
 $border: #fff;
 
 .dark {
